<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-->   Main image  <-->
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="fitStart"
        android:src="@drawable/img1"
        android:padding="5dp"
        android:contentDescription="main" />

    <!--    info    -->
    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/rtm_info"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sc_info" />

    <!--    logo    -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="182dp"
        android:layout_height="97dp"
        android:layout_below="@id/text2"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:scaleType="fitStart"
        android:src="@drawable/logo"
        android:contentDescription="logo" />

    <!--    Contact     -->
    <TextView
        android:id="@+id/text3"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/contact" />
    <ImageView
        android:id="@+id/icon1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/text3"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:scaleType="fitStart"
        android:src="@drawable/icon_1"
        android:layout_marginLeft="30dp"
        android:contentDescription="adressicon" />
    <TextView
        android:id="@+id/adress"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/icon1"
        android:layout_toRightOf="@+id/icon1"
        android:text="@string/adress"
        android:textColor="@color/black" />
    <ImageView
        android:id="@+id/icon2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/icon1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitStart"
        android:src="@drawable/icon_2"
        android:layout_marginLeft="30dp"
        android:contentDescription="phoneicon" />
    <TextView
        android:id="@+id/phone"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/icon2"
        android:layout_below="@+id/adress"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/phone"
        android:layout_toEndOf="@+id/icon2" />
    <ImageView
        android:id="@+id/icon3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/icon2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitStart"
        android:src="@drawable/icon_3"
        android:layout_marginLeft="30dp"
        android:contentDescription="webicon" />
    <TextView
        android:id="@+id/site"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/icon3"
        android:layout_below="@+id/phone"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/site"
        android:layout_toEndOf="@+id/icon3" />

    <!--    Additional contact options  -->
    <RelativeLayout
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <!--    Social networks -->
        <ImageView
            android:id="@+id/icon4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:scaleType="fitStart"
            android:src="@drawable/icon_4" />
        <ImageView
            android:id="@+id/icon5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/icon4"
            android:scaleType="fitStart"
            android:src="@drawable/icon_5" />
        <ImageView
            android:id="@+id/icon6"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/icon5"
            android:scaleType="fitStart"
            android:src="@drawable/icon_6" />
        <ImageView
            android:id="@+id/icon7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/icon6"
            android:scaleType="fitStart"
            android:src="@drawable/icon_7" />
    </RelativeLayout>

</RelativeLayout>